[project]
name = "python-server-init"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "aiohttp>=3.12.14",
    "aiosqlite>=0.21.0",
    "argon2-cffi>=25.1.0",
    "asyncio>=3.4.3",
    "build>=1.3.0",
    "fastapi>=0.116.1",
    "fastapi-cdn-host>=0.9.2",
    "greenlet>=3.2.3",
    "psutil>=7.0.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pyjwt>=2.10.1",
    "pyyaml>=6.0.2",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.35.0",
]

[project.scripts]
python-server-init = "backend.main:main"

[tool.uv]
package = true

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]
